2014-12-23  Tristan Gingold  <gingold@adacore.com>

	* configure: Regenerate.

2014-12-23  Tristan Gingold  <gingold@adacore.com>

	* configure: Regenerate.

2014-12-19  Matthew Fortune  <matthew.fortune@imgtec.com>

	* config/tc-mips.c (md_apply_fix): Apply alignment check
	to the symbol and offset rather than *valP for
	BFD_RELOC_MIPS_18_PCREL_S3.  Also update the error message
	for BFD_RELOC_MIPS_19_PCREL_S2.

2014-11-18  Igor Zamyatin  <igor.zamyatin@intel.com>

	* config/tc-i386-intel.c (i386_operator): Remove last argument
	from lex_got call.
	* config/tc-i386.c (reloc): Remove bnd_prefix from parameters'
	list.  Return always BFD_RELOC_32_PCREL.
	* (output_branch): Remove condition for BFD_RELOC_X86_64_PC32_BND.
	* (output_jump): Update call to reloc accordingly.
	* (output_interseg_jump): Likewise.
	* (output_disp): Likewise.
	* (output_imm): Likewise.
	* (x86_cons_fix_new): Likewise.
	* (lex_got): Remove bnd_prefix from parameters' list in macro and
	declarations. Don't use BFD_RELOC_X86_64_PLT32_BND.
	* (x86_cons): Update call to lex_got accordingly.
	* (i386_immediate): Likewise.
	* (i386_displacement): Likewise.
	* (md_apply_fix): Don't use BFD_RELOC_X86_64_PLT32_BND nor
	BFD_RELOC_X86_64_PC32_BND.
	* (tc_gen_reloc): Likewise.

2014-11-17  Philipp Tomsich  <philipp.tomsich@theobroma-systems.com>

	* config/tc-aarch64.c (aarch64_cpus): Add "xgene2".
	* doc/c-aarch64.texi: Document it.

2014-11-17  Philipp Tomsich  <philipp.tomsich@theobroma-systems.com>

	* config/tc-aarch64.c (aarch64_cpus): Add "xgene1".
	* doc/c-aarch64.texi: Rename xgene-1 to xgene1.

2014-11-18  Marcus Shawcroft  <marcus.shawcroft@arm.com>

	Apply trunk patch:
	* config/tc-aarch64.c (aarch64_cpus): Add CRC feature for
	cortex-A53 and cortex-A57.

2014-11-17  Nick Clifton  <nickc@redhat.com>

	Apply trunk patches:

	2014-11-13  Nick Clifton  <nickc@redhat.com>

	PR binutils/17512
	* config/obj-coff.c (coff_obj_symbol_new_hook): Set the is_sym
	field.
